--- a/Game-eng/arkanoid/index.html
+++ b/Game-eng/arkanoid/index.html
@@ -10,27 +10,35 @@
 </head>
 <body>
   <script src="./script.js"></script>
+
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
   <!-- button to the site -->
           <div class="btn-back-wrapper">
-            <button type="button" class="btn-back">&#8619; Back to the site</button>
+            <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Back to the site</button>
           </div>
           <!-- Controls message -->
   <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    <strong>Controls!</strong> <p>Use the mouse to control the platform.
+    <strong>Controls!</strong> <p>Use mouse to control the platform.
   </p>
   </div>
-
+    </div>
+      </div>
+<!-- task message -->
   <div class="container">
         <div class="callout">
-          <div class="callout-header">Virus Destroyer</div>
+          <div class="callout-header">Beware of the virus!</div>
             <span class="closebtn1" onclick="this.parentElement.style.display='none';">×</span>
               <div class="callout-container">
                   <p>
-                One of the dangers for the elderly is the disease. An active and healthy lifestyle
-                helps to avoid them. However, there are viruses and the production of antibodies
-                requires moral training and support.
-                Try to virtually destroy viruses. And STARENKI will always support.
+                    Try to virtually destroy viruses. And in reality, keep the distance, wash your hands,
+                    wear the mask and stick to a healthy lifestyle.
+                    One of the biggest threats for the elderly are different disease.
+                    During pandemic times volunteers of STARENKI were trying their best to keep elderly
+                    safe from COVID – provided them with masks, information and basic food packages in the safest way possible.
+
 
                   </p>
             </div>
