--- a/Game-eng/game-1/index.html
+++ b/Game-eng/game-1/index.html
@@ -11,65 +11,90 @@
 
         <script src="phaser.js"></script>
         <script src="game.js"></script>
-
+<!-- task message -->
   <div class="container">
     <div class="callout">
       <div class="callout-header">Volunteer: Beginning </div>
         <span class="closebtn1" onclick="this.parentElement.style.display='none';">×</span>
           <div class="callout-container">
-              <p>Become a volunteer. Collect all the posters and join the charity.
-                Then go to the entrance to the mall and continue the adventure.
-                 You can help old people in Ukraine.
-                 Join "STARENKI", become a volunteer, sponsor or just a friend of the project.
-                 Our doors are always open for good people of all ages and abilities.</p>
+              <p>Join our adventure of doing good!
+                Collect all the badges and enter the mall to proceed with STARENKI volunteer quest.
+                Join STARENKI to help elderly people in need in Ukraine: you can be a volunteer, donator,
+                or a friend of our Charity Foundation.
+                 Together we can do more!
+</p>
         </div>
     </div>
   </div>
 
+<!-- row 1 -->
+<div class="row1">
+  <div class="row1-wrap">
 <!-- button to the site -->
         <div class="btn-back-wrapper">
-          <button type="button" class="btn-back">&#8619; Back to the site</button>
+          <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Back to the site</button>
 
         </div>
-
+        <!-- control message -->
+                <div class="alert">
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+          <strong>Controls!</strong> <p>
+        Use <b>arrow keys</b> on the keyboard <b>⟵ ⟶</b> to control the direction of the character. Use <b>SPACE</b> button to jump.
+        </p>
+        </div>
+        <div class="timer-wrapper">
+          <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
+        </div>
+</div>
+</div>
+<!-- row 2 -->
+<div class="row2">
+  <div class="row2-wrap">
 <!-- button to the next level -->
         <div class="btn-next-wrapper">
-          <button  type="button" disabled id="btn-next" class="btn-next" onClick='location.href="https://danylogera.github.io/game-2/"'>Next level &#8620;</button></a>
-
+          <button  type="button" disabled id="btn-next" class="btn-next" onClick='location.href="../game-2/index.html"'>Next level &#8620;</button></a>
+</div>
 
 <!-- images info -->
   <div class="info-wrap">
-
-
-
       <div class="column-wrap">
+        <div class="img-wrap">
         <img class="new" src="./booklets/ad2021.png" alt="">
+        </div>
+        <div class="img-wrap">
         <img class="wear" src="./booklets/ad-wear.png" alt="">
+        </div>
+        <div class="img-wrap">
         <img class="product" src="./booklets/ad-product.png" alt="">
+        </div>
+        <div class="img-wrap">
         <img class="goodproject" src="./booklets/ad-goodproject.png" alt="">
+        </div>
+        <div class="img-wrap">
         <img class="info" src="./booklets/ad-info.png" alt="">
-
-      </div>
-
-      <div class="column-wrap">
-        <img class="fond" src="./booklets/ad-fond.png" alt="">
-        <img class="tea" src="./booklets/ad-tea.png" alt="">
-        <img class="birth" src="./booklets/ad-birth.png" alt="">
-        <img class="news" src="./booklets/news-info.png" alt="">
-        <img class="alone" src="./booklets/ad-alone.png" alt="">
-
-      </div>
-  </div>
         </div>
 
-        <div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  <strong>Controls!</strong> <p>
-Use the <b>arrow keys</b> on the keyboard <b>⟵ ⟶</b> to control the direction of the character. Use the <b>SPACE</b> button to jump.
-</p>
+      </div>
+
+      <div class="column-wrap">
+        <div class="img-wrap">
+        <img class="fond" src="./booklets/ad-fond.png" alt="">
+  </div>
+        <div class="img-wrap">
+        <img class="tea" src="./booklets/ad-tea.png" alt="">
+  </div>
+        <div class="img-wrap">
+        <img class="birth" src="./booklets/ad-birth.png" alt="">
+  </div>
+        <div class="img-wrap">
+        <img class="news" src="./booklets/news-info.png" alt="">
+  </div>
+        <div class="img-wrap">
+        <img class="alone" src="./booklets/ad-alone.png" alt="">
+          </div>
+      </div>
+  </div>
 </div>
-<div class="timer-wrapper">
-  <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
 </div>
 
 
