--- a/Game-eng/game-2/index.html
+++ b/Game-eng/game-2/index.html
@@ -11,7 +11,7 @@
 
         <script src="phaser.js"></script>
         <script src="game.js"></script>
-
+<!-- task message -->
   <div class="container">
     <div class="callout">
       <div class="callout-header">Shopping Wizard</div>
@@ -20,108 +20,119 @@
               <p>
 Collect products for distribution to retirees later. Choose only useful products avoiding those that can harm
  "<img class="img-sign" src="nosign.png" alt="nosign">".
-            After collecting, go to the exit. Project participants provide financial
-            assistance to retirees. Volunteers buy and deliver products to homes for the
-            elderly or directly to those in need.</p>
+ After collecting, go to the exit.
+STARENKI fundraise money, purchase food and with the help of volunteers and social workers deliver basic food packages directly to elderly people in need. We always need help with forming and delivering the packages!
+</p>
         </div>
     </div>
   </div>
 
+<!-- row 1 -->
+<div class="row1">
+  <div class="row1-wrap">
         <div class="btn-back-wrapper">
-          <button type="button"  class="btn-back">&#8619; Back to the site</button>
+          <button type="button"  class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Back to the site</button>
+        </div>
+        <!--info ads column 1 -->
+        <div class="info-wrap1">
+              <div class="column-wrap1">
+                <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-strawber.png" alt="">
+
+                </div>
+                <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-lime.png" alt="">
+
+              </div>
+              <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-avocado.png" alt="">
+
+              </div>
+              <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-water.png" alt="">
+
+              </div>
+              </div>
+
+              <div class="column-wrap1">
+                <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-fruits.png" alt="">
+
+              </div>
+                <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-milk.png" alt="">
+
+              </div>
+                <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-meat.png" alt="">
+
+              </div>
+                <div class="tooltip">
+                <img class="layout" src="./adInfo/ad-pear.png" alt="">
+
+              </div>
+            </div>
+            </div>
+        </div>
+      </div>
+
+
+            <!-- row 2 -->
+<div class="row2">
+<div class="row2-wrap">
+        <div class="btn-next-wrapper">
+          <button type="button" disabled id="btn-next" class="btn-next" onClick='location.href="../arkanoid/index.html"'>Next level &#8620;</button>
+        </div>
+    <!-- info ads column 2 -->
+      <div class="info-wrap">
+
+
+            <div class="column-wrap">
+            <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-grape.png" alt="">
+
+            </div>
+            <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-fish.png" alt="">
+
+            </div>
+            <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-nodrinking.png" alt="">
+
+            </div>
+            <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-nofastfood.png" alt="">
+
+            </div>
+
+            </div>
+
+            <div class="column-wrap">
+              <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-plum.png" alt="">
+
+            </div>
+              <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-vagetables.png" alt="">
+
+            </div>
+              <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-nosmoke.png" alt="">
+
+            </div>
+              <div class="tooltip">
+              <img class="layout" src="./adInfo/ad-nocovid.png" alt="">
+
+            </div>
+
+            </div>
         </div>
 
-        <div class="btn-next-wrapper">
-          <button type="button" disabled id="btn-next" class="btn-next" onClick='location.href="https://danylogera.github.io/arkanoid/"'>Next level &#8620;</button>
-
-
-
-                  </div>
-                  <div class="info-wrap1">
-
-                        <div class="column-wrap1">
-                          <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-gadget.png" alt="">
-                            <span class="tooltiptext">Do not lag behind the modern world! Learn to use gadgets</span>
-                          </div>
-                          <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-cards.png" alt="">
-                          <span class="tooltiptext">Modern financial management systems can help you.</span>
-                        </div>
-                        <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-dryer.png" alt="">
-                          <span class="tooltiptext">Home appliances are also being improved and are definitely not superfluous.</span>
-                        </div>
-                        <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-water.png" alt="">
-                          <span class="tooltiptext">It is necessary to drink enough water for a healthy body.</span>
-                        </div>
-                        </div>
-
-                        <div class="column-wrap1">
-                          <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-fruits.png" alt="">
-                          <span class="tooltiptext">Fruits contain important vitamins.</span>
-                        </div>
-                          <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-milk.png" alt="">
-                          <span class="tooltiptext">Dairy products contain useful proteins, bacteria and vitamins.</span>
-                        </div>
-                          <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-meat.png" alt="">
-                          <span class="tooltiptext">Meat contains the necessary proteins and fiber.</span>
-                        </div>
-                          <div class="tooltip">
-                          <img class="layout" src="./adInfo/ad-money.png" alt="">
-                          <span class="tooltiptext">Work at any age is good. Work for pleasure.</span>
-                        </div>
-                      </div>
-                      </div>
-                        <div class="info-wrap">
-
-                              <div class="column-wrap">
-                              <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-clothes.png" alt="">
-                                <span class="tooltiptext">Fashion is changing. Do not lag behind!</span>
-                              </div>
-                              <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-fish.png" alt="">
-                                <span class="tooltiptext">Fish contains useful minerals.</span>
-                              </div>
-                              <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-nodrinking.png" alt="">
-                                <span class="tooltiptext">Drinking alcohol in any amount increases the risk of disease.</span>
-                              </div>
-                              <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-nofastfood.png" alt="">
-                                <span class="tooltiptext">Fatty foods are bad for your health.</span>
-                              </div>
-
-                              </div>
-
-                              <div class="column-wrap">
-                                <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-new.png" alt="">
-                                <span class="tooltiptext">Shopping brings joy. Pamper yourself.</span>
-                              </div>
-                                <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-vagetables.png" alt="">
-                                <span class="tooltiptext">Vegetables are an important part of a healthy diet.</span>
-                              </div>
-                                <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-nosmoke.png" alt="">
-                                <span class="tooltiptext">Smoking brings disease and shortens life.</span>
-                              </div>
-                                <div class="tooltip">
-                                <img class="layout" src="./adInfo/ad-nocovid.png" alt="">
-                                <span class="tooltiptext">Follow the rules of sanitation. Take care of yourself!</span>
-                              </div>
-
-                              </div>
-                          </div>
-                            <div class="timer-wrapper">
-                        <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
-                          </div>
-
+        <!-- timer -->
+          <div class="timer-wrapper">
+      <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
+        </div>
+    </div>
+  </div>
     </body>
 </html>
