--- a/Game-eng/Titles/index.html
+++ b/Game-eng/Titles/index.html
@@ -13,28 +13,29 @@
 
 <body >
 	<div class="btn-next-wrapper">
-		<a href="#">
-<img class="img" src="./img/man.png" alt="">
-
+		<a href="https://starenki.com.ua/">
+<img class="img" src="./img/logo.png" alt="">
 </a>
 </div>
 
 <div class="body">
 <header>
-<h1>Congratulations!</h1>
-<h2>You have virtually done a good deed!</h2>
-<h3>Join us and do good to our people.</h3>
-<h4>You have joined one of our actions to help the elderly. Great job! Not everyone can donate money, time and energy to help retirees, you are a good person! So real life is waiting. Become a part of our project and help us to help the elderly.</h4>
-
-<button id="btn" onclick="scroller(); disabled1();" title="Click">&#9660;</button>
+<h1>Congratulations with successful quest finish and thanks a lot for participation!</h1>
+<h2>To join helping lonely elderly people in need in Ukraine subscribe to Starenki social
+	media accounts, donate, send us direct messages, or connect with our Volunteers’ coordinators.
+	Together we can do more!
+	We also will be happy if you simply call your grandparents or elderly parents more often,
+	start helping your old neighbors or sharing our posts among your friends. Good things bring even more good &hearts;
+</h2>
 </header>
 <div class="wrapper">
 	<!-- For STARENKI -->
-	<div class="content">
-			<h1>Created for <a href="#">STARENKI</a></h1>
-					<p>
-							For good people who do good deeds)
-					</p>
+	<div class="media ">
+	<ul>
+		<li class="smm site"> <a class="link" href="https://starenki.com.ua/">Starenki.com.ua</a></li>
+		<li class="smm facebook"> <a class="link" href="https://www.facebook.com/starenki/">starenki</a></li>
+		<li class="smm insta"><a class="link" href="https://www.instagram.com/starenki.help/">starenki.help</a></li>
+	</ul>
 	</div>
 
 <!-- Thank for images -->
@@ -77,12 +78,9 @@
 </div>
 
 <!-- By Me -->
-<div class="content">
-		<h1>Created by <a href="#">Danylo Gera</a></h1>
-				<p>
-					Modern, creative ideas are created especially for you.
-				</p>
-</div>
+<footer>
+		<p class="autor">Author <a href="https://www.instagram.com/gera_376/" class="autor">Danylo Gera</a></p>
+</footer>
 
 </div>
 
