--- a/Game-eng/game-5/index.html
+++ b/Game-eng/game-5/index.html
@@ -13,29 +13,42 @@
         <script src="phaser.js"></script>
         <script src="game.js"></script>
 
+<!-- task message -->
   <div class="container">
     <div class="callout">
-      <div class="callout-header">The Postman</div>
+      <div class="callout-header">Its Teatime!</div>
         <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
           <div class="callout-container">
-              <p> Oh no! Letters to retirees were scattered in the storage.
-                 Find and collect all lost emails. However,
-                 on the way there will be <b>RED</b> envelopes that contain annoying advertising that deceive the elderly, avoid them.
-                 Then find the computer.We are influenced by the outside world, but we need to filter out sources of information carefully.
-              </p>
+              <p> Some of our elderlies are still willing to go and have fun.
+                  Gather all the cookies for a tea party, they are coming soon!
+                  Avoid chips – not all elderly like some new staff which you do.
+                  STARENKI organize tea parties with some sweets for those old ladies
+                  and gentlemen who still can and wish to go somewhere. We also ensure
+                   the communication and provide the basic food packages.
+</p>
         </div>
     </div>
   </div>
 
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
         <div class="btn-back-wrapper">
-          <button type="button" class="btn-back">&#8619; Back to the site</button>
-        </div>
-
-        <div class="btn-next-wrapper">
-          <button type="button" disabled id="btn-next" class="btn-next" onClick='location.href="https://danylogera.github.io/Snake/"'>Next level &#8620;</button>
+          <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Back to the site</button>
         </div>
         <div class="timer-wrapper">
             <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
         </div>
+     </div>
+  </div>
+
+  <div class="row2">
+    <div class="row2-wrap">
+        <div class="btn-next-wrapper">
+          <button type="button" disabled id="btn-next" class="btn-next" onClick='location.href="../Snake/index.html"'>Next level &#8620;</button>
+        </div>
+      </div>
+    </div>
+
     </body>
 </html>
