--- a/Game-eng/game-3/index.html
+++ b/Game-eng/game-3/index.html
@@ -15,30 +15,37 @@
 
 
 
-
+<!-- task message -->
   <div class="container">
     <div class="callout">
-      <div class="callout-header">Volunteer:Philanthropist</div>
+      <div class="callout-header">Volunteer: visiting elderly</div>
         <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
           <div class="callout-container">
-              <p>Distribute food to the elderly. Your score will decrease,
-                 but by doing a good deed, your conscience will be clear.
-                 You have bought the necessary healthy and useful food, equipment, invested
-                  your resources in a good cause. Give lonely retirees food, fun conversation, 
-                teach and help them in this new world.
+              <p>You have collected all the needed food, got all information about STARENKI
+                 and are finally ready to visit our old ladies and gentlemen.
+                 For many of them your visit is the most valuable and caring event these days.
+                 Share some positive mood with them and it will come back to you soon. Thank you for joining.
+                 STARENKI volunteers never come for a visit without the social worker because we care about secureness
+                  and comfort of our recipients.
+
 
               </p>
         </div>
     </div>
   </div>
 
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
         <div class="btn-back-wrapper">
-          <button type="button" class="btn-back">&#8619; Back to the site</button>
+          <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Back to the site</button>
         </div>
 
 
         <div class="timer-wrapper">
             <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
         </div>
+      </div>
+    </div>
     </body>
 </html>
