--- a/Game-ua/arkanoid-ua/index.html
+++ b/Game-ua/arkanoid-ua/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
   <script src="./script.js"></script>
+
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
   <!-- button to the site -->
           <div class="btn-back-wrapper">
-            <button type="button" class="btn-back">&#8619; Повернутись на сайт</button>
+            <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Повернутись на сайт</button>
           </div>
           <!-- Controls message -->
   <div class="alert">
@@ -20,17 +24,20 @@
     <strong>Керування!</strong> <p>Використовуйте мишку, щоб керувати платформою.
   </p>
   </div>
+  </div>
+  </div>
 
   <div class="container">
         <div class="callout">
-          <div class="callout-header"> Борець з вірусами</div>
+          <div class="callout-header"> Бережіться вірусів!</div>
             <span class="closebtn1" onclick="this.parentElement.style.display='none';">×</span>
               <div class="callout-container">
                   <p>
-                Однією з небезпек для літніх людей є хвороби. Активний та здоровий спосіб життя допомагає їх уникати.
-                Однак є віруси, і боротьба вимагає підготовки та підтримки.
-                Спробуйте віртуально знищити віруси, а "STARENKI" завжди підтримають.
-
+                    Спробуйте віртуально знищити віруси! А у реальному житті дотримуйтесь дистанції,
+                    мийте руки, носіть маску та тримайтесь здорового способу життя.
+                    Однією з великих небезпек для літніх людей є хвороби. У часи пандемії волонтери
+                    STARENKI з усіх сил берегли бабусь і дідусів від КОВІДу надавали засоби захисту,
+                     інформували та надавали продукти у безпечний спосіб.
                   </p>
             </div>
         </div>
