--- a/Game-ua/game-1ua/index.html
+++ b/Game-ua/game-1ua/index.html
@@ -12,66 +12,72 @@
         <script src="phaser.js"></script>
         <script src="game.js"></script>
 
+<!-- message -->
   <div class="container">
     <div class="callout">
       <div class="callout-header">Волонтер: Початок </div>
         <span class="closebtn1" onclick="this.parentElement.style.display='none';">×</span>
           <div class="callout-container">
-              <p>Станьте нашим волонтером.
-                Зберіть усі афіші та пройдіть до входу в торговий центр.
-                 Ви можете допомогти літнім людям в Україні.
-                 Долучайтесь до "STARENKI", ставайте волонтером, спонсором чи просто другом проекту.
-                Наші двері завжди відкриті для добрих людей різного віку та можливостей.</p>
+              <p>Долучайтесь до пригод добротворців! Зберіть усі бейджи та зайдіть у магазин,
+                щоб розпочати волонтерський квест Старенькі.
+                Долучайтесь до STARENKI та допомагайте літнім людям в скруті: ставайте волонтером,
+                спонсором чи просто другом нашого Благодійного Фонду. Разом ми можемо більше!
+</p>
         </div>
     </div>
   </div>
 
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
 <!-- button to the site -->
         <div class="btn-back-wrapper">
-          <button type="button" class="btn-back">&#8619; Повернутись на сайт</button>
-
+          <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Повернутись на сайт</button>
         </div>
+<div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>Керування!</strong> <p>Використовуйте <b>стрілки</b> на клавіатурі
+      <b>⟵ ⟶</b>	,
+    щоб контрулювати напрям руху персонажа. Стрибок виконуйте за допомогою кнопки <b>SPACE</b>(пробіл).
+  </p>
+</div>
+    <div class="timer-wrapper">
+        <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
+    </div>
+  </div>
+</div>
 
+<!-- row 2 -->
+<div class="row2">
+  <div class="row2-wrap">
 <!-- button to the next level -->
         <div class="btn-next-wrapper">
-          <button  type="button" disabled id="btn-next" class="btn-next" onClick='location.href="https://danylogera.github.io/game-2ua/"'>Наступний рівень &#8620;</button></a>
+          <button  type="button" disabled id="btn-next" class="btn-next" onClick='location.href="../game-2ua/index.html"'>Наступний рівень &#8620;</button></a>
 
 
 <!-- images info -->
   <div class="info-wrap">
-
-
-
       <div class="column-wrap">
         <img class="new" src="./booklets/ad2021.png" alt="">
         <img class="wear" src="./booklets/ad-wear.png" alt="">
         <img class="product" src="./booklets/ad-product.png" alt="">
         <img class="goodproject" src="./booklets/ad-goodproject.png" alt="">
         <img class="info" src="./booklets/ad-info.png" alt="">
-
-      </div>
-
-      <div class="column-wrap">
-        <img class="fond" src="./booklets/ad-fond.png" alt="">
-        <img class="tea" src="./booklets/ad-tea.png" alt="">
-        <img class="birth" src="./booklets/ad-birth.png" alt="">
-        <img class="news" src="./booklets/news-info.png" alt="">
-        <img class="alone" src="./booklets/ad-alone.png" alt="">
-
-      </div>
   </div>
-        </div>
 
-        <div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  <strong>Керування!</strong> <p>Використовуйте клавіші <b>стрілки</b> на клавіатурі
-<b>⟵ ⟶</b>	,
-  щоб контрулювати напрям руху персонажа. Стрибок виконуйте за допомогою кнопки <b>SPACE</b>(пробіл).
-</p>
+        <div class="column-wrap">
+              <img class="fond" src="./booklets/ad-fond.png" alt="">
+              <img class="tea" src="./booklets/ad-tea.png" alt="">
+              <img class="birth" src="./booklets/ad-birth.png" alt="">
+              <img class="news" src="./booklets/news-info.png" alt="">
+              <img class="alone" src="./booklets/ad-alone.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="timer-wrapper">
-  <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
-</div>
+
+
 
 
     </body>
