--- a/Game-ua/game-3ua/index.html
+++ b/Game-ua/game-3ua/index.html
@@ -15,28 +15,36 @@
 
 
 
-
+<!-- task message -->
   <div class="container">
     <div class="callout">
-      <div class="callout-header">Волонтер: Філантроп</div>
+      <div class="callout-header">Волонтер: відвідини бабусь і дідусів</div>
         <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
           <div class="callout-container">
-              <p> Роздайте продукти літнім людям. Ваш рахунок буде відніматися, але, роблячи добру справу, совість буде чиста.
-                 Ви придбали потрібну здорову та корисну їжу, техніку, вклали свої ресурси в добре діло.
-                  Подаруйте самотнім пенсіонерам продукти, веселу розмову,
-                  навчіть та допоможіть їм у цьому новому світі.
+              <p> Ви зібрали потрібні продукти, пройшли ознайомлення з діяльністю STARENKI,
+                  підготувались та нарешті готові відвідати бабусь і дідусів.
+                  Для багатьох із них ваш візит найбільша подія за останній час.
+                  Подаруйте їм трошки гарного настрою і це добро повернеться до вас.
+                  Дякуємо, що доєдналися. Волонтери STARENKI ніколи не ходять без соціального працівника до стареньких.
+                  Безпека та комфорт наших підопічних – понад усе
+
               </p>
         </div>
     </div>
   </div>
 
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
         <div class="btn-back-wrapper">
-          <button type="button" class="btn-back">&#8619; Повернутись на сайт</button>
+          <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Повернутись на сайт</button>
         </div>
 
 
         <div class="timer-wrapper">
             <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
+        </div>
+        </div>
         </div>
     </body>
 </html>
