--- a/Game-ua/game-5ua/index.html
+++ b/Game-ua/game-5ua/index.html
@@ -13,29 +13,43 @@
         <script src="phaser.js"></script>
         <script src="game.js"></script>
 
+<!-- message -->
   <div class="container">
     <div class="callout">
-      <div class="callout-header">Фільтр інформації</div>
+      <div class="callout-header">Підготовка до чаювання</div>
         <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
           <div class="callout-container">
-              <p> О ні! На складі розлетілись листи до пенсіонерів.
-                Знайдіть і зберіть їх. Однак по дорозі з’являться <b>червоні</b> конверти, які містять рекламу,
-                 яка обманює літніх людей, уникайте їх. Тоді знайдіть комп’ютер.
-                На нас впливає зовнішній світ, але потрібно ретельно фільтрувати джерела інформації.
+              <p> Деякі бабусі і дідусі хочуть ще кудись ходити і спілкуватись.
+                Зберіть все печиво для чаювання, куди вони скоро завітають!
+                Уникайте чипсів – не всі старенькі полюбляють те, що любить молодь.
+                STARENKI організовують чаювання зі смаколиками для тих ба і де, хто ще може
+                і хоче кудись піти. Ми також організовуємо спілкування із волонтерами та видаємо продуктовий пакет.
+
               </p>
         </div>
     </div>
   </div>
 
+  <!-- row 1 -->
+  <div class="row1">
+    <div class="row1-wrap">
         <div class="btn-back-wrapper">
-          <button type="button" class="btn-back">&#8619; Повернутись на сайт</button>
-        </div>
-
-        <div class="btn-next-wrapper">
-          <button type="button" disabled id="btn-next" class="btn-next" onClick='location.href="https://danylogera.github.io/Snake-ua/"'>Наступний рівень &#8620;</button>
+          <button type="button" class="btn-back" onClick='location.href="https://starenki.com.ua/"'>&#8619; Повернутись на сайт</button>
         </div>
         <div class="timer-wrapper">
             <input class="timer" id="timer" type="text" name="" value="" disabled value="00:00">
         </div>
+      </div>
+    </div>
+
+        <!-- row 2 -->
+        <div class="row2">
+          <div class="row2-wrap">
+        <div class="btn-next-wrapper">
+          <button type="button" disabled id="btn-next" class="btn-next" onClick='location.href="../Snake-ua/index.html"'>Наступний рівень &#8620;</button>
+        </div>
+      </div>
+    </div>
+
     </body>
 </html>
