--- a/Game-ua/Titles-ua/index.html
+++ b/Game-ua/Titles-ua/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Titles</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">s
+<link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles.css">
 	<script src="./script.js"></script>
@@ -14,28 +14,29 @@
 
 <body >
 	<div class="btn-next-wrapper">
-		<a href="#">
-<img class="img" src="./img/man.png" alt="">
-
-</a>
+		<a href="https://starenki.com.ua/">
+		<img class="img" src="./img/logo.png" alt="">
+		</a>
 </div>
 
 <div class="body">
 <header>
-<h1>Вітання!</h1>
-<h2>Ви віртуально зробили добру справу!</h2>
-<h3>Приєднуйтесь і робіть добро нашим людям.</h3>
-<h4>Ви долучились до однієї з наших акцій віртуально. Чудова робота! Не кожен може пожертвувати грошима, часом та енергією на допомогу пенсіонерам, ви хороша людина! Тож реальне життя чекає. Станьте частиною нашого проекту та допоможіть нам допомогти літнім людям.</h4>
-
-<button id="btn" onclick="scroller(); disabled1();" title="Клікніть" >&#9660;</button>
+<h1>Вітаємо з проходженням волонтерського квесту та дуже дякуємо за участь!</h1>
+<h2>Аби приєднатися до допомоги самотнім літнім людям у скруті в Україні
+	 підписуйтесь на сторінки Starenki у соцмережах, робіть донейти, пишіть
+	  нашим координаторам волонтерів чи в дірект. Разом ми можемо більше!
+Також ми будемо щасливі навіть якщо ви просто зайвий раз подзвоните своїм
+дідусям і бабусям чи літнім батькам, допоможете літнім сусідам або будете
+поширювати наші дописи серед друзів. Добро множить добро ♥ </h2>
 </header>
 <div class="wrapper">
 	<!-- For STARENKI -->
-	<div class="content">
-			<h1>Створено для благодійної організації <a href="#">STARENKI</a></h1>
-					<p>
-							Для добрих людей, які роблять добрі справи)
-					</p>
+	<div class="media ">
+	<ul>
+		<li class="smm site"> <a class="link" href="https://starenki.com.ua/">Starenki.com.ua</a></li>
+		<li class="smm facebook"> <a class="link" href="https://www.facebook.com/starenki/">starenki</a></li>
+		<li class="smm insta"><a class="link" href="https://www.instagram.com/starenki.help/">starenki.help</a></li>
+	</ul>
 	</div>
 
 <!-- Thank for images -->
@@ -78,12 +79,9 @@
 </div>
 
 <!-- By Me -->
-<div class="content">
-		<h1>Created by <a href="#">Danylo Gera</a></h1>
-				<p>
-					Modern, creative ideas are created especially for you.
-				</p>
-</div>
+<footer>
+		<p class="autor">Author <a href="https://www.instagram.com/gera_376/" class="autor">Danylo Gera</a></p>
+</footer>
 
 </div>
 
