--- a/sob4_ru/sob_4.html
+++ b/sob4_ru/sob_4.html
@@ -306,17 +306,17 @@
          </div>
 
       <div class="block_for_adress">
-        <p class="adress"><a href="">Украина, Киев, ул. Мельникова, 12</a></p>
+        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Украина, Киев, ул. Мельникова, 12</a></p>
         <p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
         <div class="block_with_img_link">
-          <a href="https://www.instagram.com/starenki.help/"><img src="foto/link/instagram_1.png" class="instagram"></a>
-          <a href="https://www.facebook.com/starenki/"><img src="foto/link/facebook_1.png" class="facebook"></a>
-          <a href="https://t.me/starenki"><img src="foto/link/telega_1.png" class="telega"></a>
+          <a href="https://www.instagram.com/starenki.help/"><img src="foto/insta/instagram_1.png" class="instagram"></a>
+          <a href="https://www.facebook.com/starenki/"><img src="foto/insta/facebook_1.png" class="facebook"></a>
+          <a href="https://t.me/starenki"><img src="foto/insta/telega_1.png" class="telega"></a>
 
               <div class="gmail_youtube">
-                <a href="mailto:help@starenki.com.ua"><img src="foto/link/gamail_1.png" class="gmail"></a>
-                <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="foto/link/youtube_1.png" class="youtube"></a>
+                <a href="mailto:help@starenki.com.ua"><img src="foto/insta/gamail_1.png" class="gmail"></a>
+                <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="foto/insta/youtube_1.png" class="youtube"></a>
               </div>
         </div>
 
@@ -347,34 +347,35 @@
 
       <div class="insta">
         <a href="https://www.instagram.com/cheater666_programist/">
-          <img src="foto/link/instagram_black.png">
+          <img src="foto/insta/instagram_black.png">
         </a>
       </div>
 
       <div class="telega_oleksandr">
         <a href="https://web.telegram.org/#/im?p=@oleksandr">
-          <img src="foto/link/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
 
       <div class="telega_Aahzmandiuss">
         <a href="https://web.telegram.org/#/im?p=@Aahzmandiuss">
-          <img src="foto/link/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
 
       <div class="telega_Dana">
         <a href="https://web.telegram.org/#/im?p=u854258987_4383190150680909201">
-          <img src="foto/link/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
      </div>
 
-      <div class="arrow">
-      <a href="">
-        <img src="foto/декор/стрелочка.png">
-      </a>
-     </div>
+      <button class="back-to-top-btn" id="back-to-top-btn">
+        <img class="photo" src="foto/декор/стрелочка.png">
+      </button>
+
    </footer>
+
+   <script src="sob4.js"></script>
 </body>
 </html>
