--- a/sob2_ru/index.html
+++ b/sob2_ru/index.html
@@ -20,10 +20,10 @@
         <ul class="links">
           <li class="hover"><a href="#">Главная</a></li>
           <li class="hover"><a href="#">О нас</a></li>
-          <li class="hover"><a href="#">ЧаВо</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
           <li class="hover"><a href="#">Контакты</a></li>
           <li class="hover"><a href="#">События</a></li>
+          <li class="hover"><a href="#">Игра</a></li>
 <!--выпадающий список-->
           <li>
             <a href="#" class="desktop-link">Языки</a>
@@ -198,7 +198,7 @@
          </div>
 
       <div class="block_for_adress">
-        <p class="adress"><a href="">Украина, Киев, ул. Мельникова, 12</a></p>
+        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Украина, Киев, ул. Мельникова, 12</a></p>
         <p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
         <div class="block_with_img_link">
@@ -244,7 +244,7 @@
       </div>
 
       <div class="telega_oleksandr">
-        <a href="https://web.telegram.org/#/im?p=@chivrig">
+        <a href="https://web.telegram.org/#/im?p=@oleksandr">
           <img src="foto/insta/telega_black.png">
         </a>
       </div>
@@ -262,11 +262,11 @@
       </div>
      </div>
 
-     <div class="arrow">
-      <a href="">
-        <img src="foto/стрелочка.png">
-      </a>
-     </div>
+      <button class="back-to-top-btn" id="back-to-top-btn">
+        <img class="photo" src="foto/стрелочка.png">
+      </button>
+
    </footer>
+   <script src="sob2.js"></script>
 </body>
 </html>
