--- a/sob1_ru/sob1.html
+++ b/sob1_ru/sob1.html
@@ -20,10 +20,10 @@
         <ul class="links">
           <li class="hover"><a href="#">Главная</a></li>
           <li class="hover"><a href="#">О нас</a></li>
-          <li class="hover"><a href="#">ЧаВо</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
           <li class="hover"><a href="#">Контакты</a></li>
           <li class="hover"><a href="#">События</a></li>
+          <li class="hover"><a href="#">Игра</a></li>
 <!--выпадающий список-->
           <li>
             <a href="#" class="desktop-link">Языки</a>
@@ -89,7 +89,7 @@
 
 <div class="ul"></div>
 
-<p id='demo' class='demo'>получен <!--3-->выйграшный приз: #бесплаьный номер в счастливый отель</p>
+<p id='demo' class='demo'>получен<!--3--> выйграшный приз: #бесплаьный номер в счастливый отель</p>
 <button type='button'>
   <p class="p">Вся сумма пожертвований в 100% размере идет на закупку
      продуктов и базовой бытовой химии нашим старичкам
@@ -125,7 +125,6 @@
 
 
 
-<!--конец-->
 <footer>
     <div class="block_img">
       <img src="foto/logo/logo_2.png">
@@ -157,15 +156,15 @@
         <ul>
           <li><a href="">Главная</a></li>
           <li><a href="">О нас</a></li>
-          <li><a href="">ЧаВо</a></li>
           <li><a href="">Галерея</a></li>
-          <li><a href="contacts_ru.html">Контакты</a></li>
-          <li><a href="">События</a></li>
+          <li><a href="">Контакты</a></li>
+          <li><a href="contacts_ru.html">События</a></li>
+          <li><a href="">Игра</a></li>
         </ul>
          </div>
 
       <div class="block_for_adress">
-        <p class="adress"><a href="">Украина, Киев, ул. Мельникова, 12</a></p>
+        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Украина, Киев, ул. Мельникова, 12</a></p>
         <p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
         <div class="block_with_img_link">
@@ -229,20 +228,13 @@
       </div>
      </div>
 
-     <div class="arrow">
-      <a href="">
-        <img src="foto/стрелочка.png">
-      </a>
-     </div>
+      <button class="back-to-top-btn" id="back-to-top-btn">
+        <img class="photo" src="foto/стрелочка.png">
+      </button>
+
    </footer>
 
 
-   <script>
-     var tag = document.getElementById('demo');
-     var button = document.querySelector('button');
-     button.addEventListener('click', function(){
-     tag.classList.toggle('demo');
-    });
-   </script>
+   <script src="sob1.js"></script>
 </body>
 </html>
