--- a/menu et footer/index.html
+++ b/menu et footer/index.html
@@ -20,10 +20,10 @@
         <ul class="links">
           <li class="hover"><a href="#">Главная</a></li>
           <li class="hover"><a href="#">О нас</a></li>
-          <li class="hover"><a href="#">ЧаВо</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
           <li class="hover"><a href="#">Контакты</a></li>
           <li class="hover"><a href="#">События</a></li>
+          <li class="hover"><a href="#">Игра</a></li>
 <!--выпадающий список-->
           <li>
             <a href="#" class="desktop-link">Языки</a>
