--- a/evennement_фр/evennement_ru.html
+++ b/evennement_фр/evennement_ru.html
@@ -187,7 +187,7 @@
       </div>
      </div>
 
-      <button class="back-to-top-btn" id="back-to-top-btn">
+      <button class="back_to_top_btn" id="back-to-top-btn">
         <img class="photo" src="foto/декор/стрелочка.png">
       </button>
    </footer>
