--- a/evennement_ru/evennement_ru.html
+++ b/evennement_ru/evennement_ru.html
@@ -18,10 +18,10 @@
         <ul class="links">
           <li class="hover"><a href="#">Главная</a></li>
           <li class="hover"><a href="#">О нас</a></li>
-          <li class="hover"><a href="#">ЧаВо</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
           <li class="hover"><a href="#">Контакты</a></li>
           <li class="hover"><a href="#">События</a></li>
+          <li class="hover"><a href="#">Игра</a></li>
 <!--выпадающий список-->
           <li>
             <a href="#" class="desktop-link">Языки</a>
@@ -114,10 +114,10 @@
         <ul>
           <li><a href="">Главная</a></li>
           <li><a href="">О нас</a></li>
-          <li><a href="">ЧаВо</a></li>
           <li><a href="">Галерея</a></li>
-          <li><a href="contacts_ru.html">Контакты</a></li>
-          <li><a href="">События</a></li>
+          <li><a href="">Контакты</a></li>
+          <li><a href="contacts_ru.html">События</a></li>
+          <li><a href="">Игра</a></li>
         </ul>
          </div>
 
