--- a/contacts.html
+++ b/contacts.html
@@ -19,11 +19,11 @@
      <div class="logo"><a href="#"><img class="logph" src="foto/logo/Logo.png"></a></div>
         <ul class="links">
           <li class="hover"><a href="#">Главная</a></li>
-          <li class="hover"><a href="about_us.html">О нас</a></li>
+          <li class="hover"><a href="#">О нас</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
-          <li class="hover"><a href="contacts.html">Контакты</a></li>
-          <li class="hover"><a href="evennement_ru.html">События</a></li>
-          <li class="hover"><a href="game.html">Игра</a></li>
+          <li class="hover"><a href="#">Контакты</a></li>
+          <li class="hover"><a href="#">События</a></li>
+          <li class="hover"><a href="#">Игра</a></li>
 <!--выпадающий список-->
           <li>
             <a href="#" class="desktop-link">Языки</a>
@@ -204,11 +204,11 @@
          <div class="block_for_menu">
         <ul>
           <li><a href="">Главная</a></li>
-          <li><a href="about_us.html">О нас</a></li>
+          <li><a href="">О нас</a></li>
           <li><a href="">Галерея</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-          <li><a href="evennement_ru.html">События</a></li>
-          <li><a href="game.html">Игра</a></li>
+          <li><a href="">Контакты</a></li>
+          <li><a href="">События</a></li>
+          <li><a href="">Игра</a></li>
         </ul>
          </div>
 
